cif/org.eclipse.escet.cif.tests/tests/event_based/supervisor_synthesis/evt_non_ctrl.run.err
ERROR: Failed to create supervisor for CIF file "event_based/supervisor_synthesis/evt_non_ctrl.cif".
CAUSE: CIF supervisor synthesis tool failed due to unsatisfied preconditions:

  --------------------------------------------------------------
  (1/1) Event is not declared as controllable or uncontrollable.
  --------------------------------------------------------------
   * In the top-level scope of the specification:
     - event e;
             ^
